--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "babel-preset-flow": "^6.23.0",
     "babel-register": "^6.26.0",
     "babelify": "^7.3.0",
+    "benchmark": "^2.1.4",
     "browserify": "^13.3.0",
     "check-dependencies": "^1.1.0",
     "clean-css": "^3.4.23",
@@ -35,7 +36,7 @@
     "glob": "^7.1.1",
     "jest": "^22.0.4",
     "jest-serializer-html": "^4.0.1",
-    "js-yaml": "^3.3.1",
+    "js-yaml": "^3.10.0",
     "json-stable-stringify": "^1.0.1",
     "jspngopt": "^0.2.0",
     "less": "~2.7.1",
@@ -65,6 +66,7 @@
     "clean": "rm -rf build/* node_modules/",
     "clean-install": "npm run clean && npm i",
     "test": "check-dependencies && npm run lint && npm run flow && npm run jest",
+    "perf-test": "check-dependencies && node test/perf-test.js",
     "build-css": "lessc --clean-css static/katex.less build/katex.css",
     "prestart": "rimraf build && npm run build-css && npm run copy",
     "start": "check-dependencies && node webpackDevServer.js",
